--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react-grid-layout": "^0.16.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,6 +31,13 @@
   },
   "devDependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@storybook/addon-actions": "^5.2.0-alpha.36",
+    "@storybook/addon-info": "^5.1.9",
+    "@storybook/addon-knobs": "^5.1.9",
+    "@storybook/addon-links": "^5.2.0-alpha.36",
+    "@storybook/addon-options": "^5.1.9",
+    "@storybook/addons": "^5.2.0-alpha.36",
+    "@storybook/react": "^5.2.0-alpha.36",
     "babel-plugin-emotion": "^10.0.14",
     "babel-plugin-import": "^1.12.0",
     "babel-plugin-polished": "^1.1.0",
@@ -37,6 +47,7 @@
     "fontfaceobserver": "^2.1.0",
     "history": "^4.9.0",
     "intl": "^1.2.5",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
@@ -47,6 +58,7 @@
     "redux": "^4.0.1",
     "redux-saga": "^1.0.5",
     "reselect": "^4.0.0",
+    "storybook-addon-styled-component-theme": "^1.2.3",
     "styled-components": "^4.3.2"
   }
 }
