--- a/package.json
+++ b/package.json
@@ -3,8 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "connected-react-router": "^6.5.0",
+    "core-js": "^3.1.4",
+    "customize-cra": "^0.2.14",
+    "fetch": "^1.1.0",
+    "fontfaceobserver": "^2.1.0",
+    "offline-plugin": "^5.0.7",
+    "react": "^16.8.6",
+    "react-app-rewired": "^2.1.3",
+    "react-dom": "^16.8.6",
     "react-grid-layout": "^0.16.6",
-    "react-scripts": "3.0.1"
+    "react-helmet": "^5.2.1",
+    "react-intl": "^2.9.0",
+    "react-redux": "^7.1.0",
+    "react-resizable": "^1.8.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.5",
+    "reselect": "^4.0.0",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -12,7 +31,8 @@
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "precommit": "NODE_ENV=production lint-staged"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,7 +50,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.4.4",
     "@storybook/addon-actions": "^5.2.0-alpha.36",
     "@storybook/addon-info": "^5.1.9",
     "@storybook/addon-knobs": "^5.1.9",
@@ -42,23 +61,19 @@
     "babel-plugin-import": "^1.12.0",
     "babel-plugin-polished": "^1.1.0",
     "babel-plugin-transform-do-expressions": "^6.22.0",
-    "connected-react-router": "^6.5.0",
-    "customize-cra": "^0.2.14",
-    "fontfaceobserver": "^2.1.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.2",
     "history": "^4.9.0",
+    "husky": "^3.0.0",
     "intl": "^1.2.5",
+    "lint-staged": "^9.1.0",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-app-rewired": "^2.1.3",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "react-intl": "^2.9.0",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
-    "redux": "^4.0.1",
-    "redux-saga": "^1.0.5",
-    "reselect": "^4.0.0",
-    "storybook-addon-styled-component-theme": "^1.2.3",
-    "styled-components": "^4.3.2"
+    "storybook-addon-styled-component-theme": "^1.2.3"
   }
 }
