--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fetch": "^1.1.0",
     "fontfaceobserver": "^2.1.0",
     "offline-plugin": "^5.0.7",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
@@ -20,6 +21,7 @@
     "react-resizable": "^1.8.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-vis": "^1.11.7",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.5",
     "reselect": "^4.0.0",
@@ -73,7 +75,6 @@
     "lint-staged": "^9.1.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "prop-types": "^15.7.2",
     "storybook-addon-styled-component-theme": "^1.2.3"
   }
 }
