--- a/package.json
+++ b/package.json
@@ -25,7 +25,14 @@
     "redux": "^4.0.1",
     "redux-saga": "^1.0.5",
     "reselect": "^4.0.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "@storybook/addon-actions": "^5.2.0-alpha.36",
+    "@storybook/addon-info": "^5.1.9",
+    "@storybook/addon-knobs": "^5.1.9",
+    "@storybook/addon-links": "^5.2.0-alpha.36",
+    "@storybook/addon-options": "^5.1.9",
+    "@storybook/addons": "^5.2.0-alpha.36",
+    "@storybook/react": "^5.2.0-alpha.36"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -52,13 +59,6 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.2.0-alpha.36",
-    "@storybook/addon-info": "^5.1.9",
-    "@storybook/addon-knobs": "^5.1.9",
-    "@storybook/addon-links": "^5.2.0-alpha.36",
-    "@storybook/addon-options": "^5.1.9",
-    "@storybook/addons": "^5.2.0-alpha.36",
-    "@storybook/react": "^5.2.0-alpha.36",
     "babel-plugin-emotion": "^10.0.14",
     "babel-plugin-import": "^1.12.0",
     "babel-plugin-polished": "^1.1.0",
