--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@storybook/addon-links": "^5.2.0-alpha.36",
     "@storybook/addon-options": "^5.1.9",
     "@storybook/addons": "^5.2.0-alpha.36",
-    "@storybook/react": "^5.2.0-alpha.36"
+    "@storybook/react": "^5.2.0-alpha.36",
+    "immer": "^3.1.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -75,6 +76,7 @@
     "lint-staged": "^9.1.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
+    "redux-logger": "^3.0.6",
     "storybook-addon-styled-component-theme": "^1.2.3"
   }
 }
