--- a/package.json
+++ b/package.json
@@ -2,14 +2,32 @@
   "name": "2019_react_demo",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
+    "@alpacahq/alpaca-trade-api": "^1.1.0",
     "@babel/polyfill": "^7.4.4",
+    "@storybook/addon-actions": "^5.2.0-alpha.36",
+    "@storybook/addon-info": "^5.1.9",
+    "@storybook/addon-knobs": "^5.1.9",
+    "@storybook/addon-links": "^5.2.0-alpha.36",
+    "@storybook/addon-options": "^5.1.9",
+    "@storybook/addons": "^5.2.0-alpha.36",
+    "@storybook/react": "^5.2.0-alpha.36",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "connected-react-router": "^6.5.0",
     "core-js": "^3.1.4",
     "customize-cra": "^0.2.14",
+    "express": "^4.17.1",
+    "express-pino-logger": "^4.0.0",
     "fetch": "^1.1.0",
     "fontfaceobserver": "^2.1.0",
+    "immer": "^3.1.3",
+    "node-env-run": "^3.0.2",
+    "nodemon": "^1.19.1",
+    "npm-run-all": "^4.1.5",
     "offline-plugin": "^5.0.7",
+    "pino-colada": "^1.4.5",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
@@ -25,18 +43,12 @@
     "redux": "^4.0.1",
     "redux-saga": "^1.0.5",
     "reselect": "^4.0.0",
-    "styled-components": "^4.3.2",
-    "@storybook/addon-actions": "^5.2.0-alpha.36",
-    "@storybook/addon-info": "^5.1.9",
-    "@storybook/addon-knobs": "^5.1.9",
-    "@storybook/addon-links": "^5.2.0-alpha.36",
-    "@storybook/addon-options": "^5.1.9",
-    "@storybook/addons": "^5.2.0-alpha.36",
-    "@storybook/react": "^5.2.0-alpha.36",
-    "immer": "^3.1.3"
+    "styled-components": "^4.3.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "run-p server startUI",
+    "startUI": "react-app-rewired start",
+    "server": "node-env-run server --exec nodemon | pino-colada",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
